<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Veto Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="game_type_icon">Game Type Icon</string>
    <string name="game_name">Game Name</string>
    <string name="current_suggestion">Current Suggestion</string>
    <string name="winning_suggestion">Winning Suggestion</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="time_past">Time Past</string>
    <string name="number_of_members">Number of Members</string>
    <string name="title_activity_new_game">Create a Game</string>
    <string name="name_hint">Name</string>
    <string name="btn_invite">Invite people</string>
    <string name="empty_game_list">Currently you are not in any games. Why not start one?</string>
    <string name="empty_past_game_list">You have no previous games. You should start one.</string>
    <string name="empty_suggestion_list">There are no suggestions in your area.\n
                                         Try increasing the search radius or change your location.
                                         </string>
    <string name="winner">Winner</string>
    <string name="back">Back</string>
    <string name="address">Address</string>
    <string name="within">Within</string>
    <string name="milesOf">Miles of</string>
    <string name="radius">Radius 1-50</string>
    <string name="zipCode">Zip Code</string>
    <string name="create_game">Create a new game</string>
    <string name="view_past_games">View Past Games</string>
    <string name="all_players"><u><b>All Players</b></u></string>
    <string name="past_suggestions"><u><b>Past Suggestions</b></u></string>

    <string-array name="game_topic">
        <item>breakfast</item>
        <item>lunch</item>
        <item>dinner</item>
    </string-array>

    <string name="title_activity_past_game_list">Past Games</string>
    <string name="title_activity_curr_game">Current Game</string>
    <string name="title_activity_past_suggestion_list">Past Suggestions</string>

    <string name="title_activity_new_suggestion">Make a Suggestion</string>
    <string name="search_for_friend">Search for a Friend</string>
    <string name="search_for_suggestion">Search for a Suggestion</string>
    <string name="search_for_game">Search for a Game</string>
    <string name="search">Search</string>
    <string name="no_results">No Results Found</string>
	<string name="title_activity_login">Login</string>
    <string name="title_activity_game_list">Current Games</string>
    <string name="title_activity_invite_people">Invite Friends</string>

</resources>
